attachments + Swagger
